--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,6 @@
-.App {
+/* .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+} */
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -21,6 +16,11 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+.Main{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-link {
